# WiFi

./: Cargo.toml  README.md  db_scheme.sql
src/: config.rs  db_structs.rs  errors.rs  forum_downloader.rs  main.rs  objects.rs  tools.rs
src/api/: authors.rs  categories.rs  db.rs  messages.rs  mod.rs  prelude.rs  sites.rs  threads.rs
src/forum_downloader/: mod.rs
