[package]
name = "WiFi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"]}
regex = "1.12"
scraper = "0.25"
itertools = "0.14"
futures-util = "0.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "chrono"] }
lazy_static = "1.5.0"
reqwest = { version = "0.13", features = ["blocking"] }
tokio-stream = "0.1.18"
chrono = { version = "0.4.43" , features = ["serde"]}
thiserror = "2"